<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rhphumanoid_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation for RHPHumanoid</description>
  <maintainer email="chanhui.robot@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <exec_depend>rhphumanoid_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
